// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ladder filters out vehicles whose block is not active 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -20 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={-63}
      x2={40}
      y1={-25}
      y2={-55}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,-25)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="downward"
        x1={-40}
        x2={-40}
        y1={-40}
        y2={-25}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t0 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-20}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-20}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t1 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-20}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t2 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t2
    </text>
  </svg>
  <div
    className="__react_component_tooltip t66e9900-73cf-427d-b80e-db11c83868ff place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.t66e9900-73cf-427d-b80e-db11c83868ff {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t66e9900-73cf-427d-b80e-db11c83868ff.place-top {
        margin-top: -10px;
    }
    .t66e9900-73cf-427d-b80e-db11c83868ff.place-top::before {
        border-top: 8px solid transparent;
    }
    .t66e9900-73cf-427d-b80e-db11c83868ff.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t66e9900-73cf-427d-b80e-db11c83868ff.place-bottom {
        margin-top: 10px;
    }
    .t66e9900-73cf-427d-b80e-db11c83868ff.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t66e9900-73cf-427d-b80e-db11c83868ff.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t66e9900-73cf-427d-b80e-db11c83868ff.place-left {
        margin-left: -10px;
    }
    .t66e9900-73cf-427d-b80e-db11c83868ff.place-left::before {
        border-left: 8px solid transparent;
    }
    .t66e9900-73cf-427d-b80e-db11c83868ff.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t66e9900-73cf-427d-b80e-db11c83868ff.place-right {
        margin-left: 10px;
    }
    .t66e9900-73cf-427d-b80e-db11c83868ff.place-right::before {
        border-right: 8px solid transparent;
    }
    .t66e9900-73cf-427d-b80e-db11c83868ff.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;

exports[`ladder highlights a selected vehicle 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -20 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={-63}
      x2={40}
      y1={-25}
      y2={-55}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,-25)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <g>
      <g
        className="m-ladder__vehicle selected "
        onClick={[Function]}
        transform="translate(63,-30)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="downward"
        x1={-40}
        x2={-40}
        y1={-40}
        y2={-25}
      />
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="upward"
        x1={40}
        x2={40}
        y1={0}
        y2={-30}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t0 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-20}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-20}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t1 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-20}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t2 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t2
    </text>
  </svg>
  <div
    className="__react_component_tooltip tca2521d-3475-4eac-8a61-beb85d06a289 place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.tca2521d-3475-4eac-8a61-beb85d06a289 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.tca2521d-3475-4eac-8a61-beb85d06a289.place-top {
        margin-top: -10px;
    }
    .tca2521d-3475-4eac-8a61-beb85d06a289.place-top::before {
        border-top: 8px solid transparent;
    }
    .tca2521d-3475-4eac-8a61-beb85d06a289.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .tca2521d-3475-4eac-8a61-beb85d06a289.place-bottom {
        margin-top: 10px;
    }
    .tca2521d-3475-4eac-8a61-beb85d06a289.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .tca2521d-3475-4eac-8a61-beb85d06a289.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .tca2521d-3475-4eac-8a61-beb85d06a289.place-left {
        margin-left: -10px;
    }
    .tca2521d-3475-4eac-8a61-beb85d06a289.place-left::before {
        border-left: 8px solid transparent;
    }
    .tca2521d-3475-4eac-8a61-beb85d06a289.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .tca2521d-3475-4eac-8a61-beb85d06a289.place-right {
        margin-left: 10px;
    }
    .tca2521d-3475-4eac-8a61-beb85d06a289.place-right::before {
        border-right: 8px solid transparent;
    }
    .tca2521d-3475-4eac-8a61-beb85d06a289.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;

exports[`ladder renders a ghost bus 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -20 184 0"
    width={184}
  >
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium ghost m-vehicle-icon--highlighted"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            0123
          </text>
          <g
            transform="scale(0.4375) translate(-24,-23)"
          >
            <path
              className="m-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
            <path
              className="m-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
          </g>
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={4.5}
          >
            X
          </text>
          <g
            transform="translate(9.375, -6.25) scale(0.2) translate(-24, -24)"
          >
            <g
              className="c-icon-alert-circle--highlighted"
            >
              <circle
                className="c-icon-alert-circle__outline"
                cx="24"
                cy="24"
                r="27"
              />
              <circle
                className="c-icon-alert-circle__fill"
                cx="24"
                cy="24"
                r="22.59"
              />
              <g
                className="c-icon-alert-circle__exclamation-point"
              >
                <path
                  d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                />
                <path
                  d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t0 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-20}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-20}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t1 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-20}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t2 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t2
    </text>
  </svg>
  <div
    className="__react_component_tooltip t0cd1199-fae1-4375-bf6a-f343e4685426 place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.t0cd1199-fae1-4375-bf6a-f343e4685426 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t0cd1199-fae1-4375-bf6a-f343e4685426.place-top {
        margin-top: -10px;
    }
    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-top::before {
        border-top: 8px solid transparent;
    }
    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-bottom {
        margin-top: 10px;
    }
    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-left {
        margin-left: -10px;
    }
    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-left::before {
        border-left: 8px solid transparent;
    }
    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-right {
        margin-left: 10px;
    }
    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-right::before {
        border-right: 8px solid transparent;
    }
    .t0cd1199-fae1-4375-bf6a-f343e4685426.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;

exports[`ladder renders a ladder 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 232,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-116 -20 232 0"
    width={232}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={-87}
      x2={40}
      y1={-25}
      y2={-55}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,-30)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-87,-25)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,0)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            3
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="notimepoint"
        x1={-40}
        x2={-40}
        y1={-40}
        y2={0}
      />
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="downward"
        x1={-40}
        x2={-40}
        y1={0}
        y2={-25}
      />
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="upward"
        x1={40}
        x2={40}
        y1={0}
        y2={-30}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t0 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-20}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-20}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t1 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-20}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t2 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t2
    </text>
  </svg>
  <div
    className="__react_component_tooltip t6d81993-464f-4efa-bfe6-a557b2e672d1 place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.t6d81993-464f-4efa-bfe6-a557b2e672d1 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t6d81993-464f-4efa-bfe6-a557b2e672d1.place-top {
        margin-top: -10px;
    }
    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-top::before {
        border-top: 8px solid transparent;
    }
    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-bottom {
        margin-top: 10px;
    }
    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-left {
        margin-left: -10px;
    }
    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-left::before {
        border-left: 8px solid transparent;
    }
    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-right {
        margin-left: 10px;
    }
    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-right::before {
        border-right: 8px solid transparent;
    }
    .t6d81993-464f-4efa-bfe6-a557b2e672d1.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;

exports[`ladder renders a ladder with no timepoints 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -20 184 0"
    width={184}
  >
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="upward"
        x1={40}
        x2={40}
        y1={0}
        y2={0}
      />
    </g>
  </svg>
  <div
    className="__react_component_tooltip tc7f0409-196d-4c79-9326-4fb52faaa038 place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.tc7f0409-196d-4c79-9326-4fb52faaa038 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.tc7f0409-196d-4c79-9326-4fb52faaa038.place-top {
        margin-top: -10px;
    }
    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-top::before {
        border-top: 8px solid transparent;
    }
    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-bottom {
        margin-top: 10px;
    }
    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-left {
        margin-left: -10px;
    }
    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-left::before {
        border-left: 8px solid transparent;
    }
    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-right {
        margin-left: 10px;
    }
    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-right::before {
        border-right: 8px solid transparent;
    }
    .tc7f0409-196d-4c79-9326-4fb52faaa038.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;

exports[`ladder renders a reversed ladder 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -20 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={63}
      x2={40}
      y1={-30}
      y2={-28}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,-30)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="upward"
        x1={40}
        x2={40}
        y1={0}
        y2={-30}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t2 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t2
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-20}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-20}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t1 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-20}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t0 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t0
    </text>
  </svg>
  <div
    className="__react_component_tooltip t3e7a891-6cee-42d9-8559-dad548d58b0d place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.t3e7a891-6cee-42d9-8559-dad548d58b0d {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t3e7a891-6cee-42d9-8559-dad548d58b0d.place-top {
        margin-top: -10px;
    }
    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-top::before {
        border-top: 8px solid transparent;
    }
    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-bottom {
        margin-top: 10px;
    }
    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-left {
        margin-left: -10px;
    }
    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-left::before {
        border-left: 8px solid transparent;
    }
    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-right {
        margin-left: 10px;
    }
    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-right::before {
        border-right: 8px solid transparent;
    }
    .t3e7a891-6cee-42d9-8559-dad548d58b0d.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;

exports[`ladder renders an off-course vehicle 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -20 184 0"
    width={184}
  >
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium off-course"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            1
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(0) translate(-24,-22)"
          />
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8.5}
          >
            D
          </text>
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t0 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-20}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-20}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t1 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-20}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t2 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t2
    </text>
  </svg>
  <div
    className="__react_component_tooltip tba23d2e-67a5-49b7-90d8-4e766b3c125c place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.tba23d2e-67a5-49b7-90d8-4e766b3c125c {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-top {
        margin-top: -10px;
    }
    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-top::before {
        border-top: 8px solid transparent;
    }
    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-bottom {
        margin-top: 10px;
    }
    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-left {
        margin-left: -10px;
    }
    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-left::before {
        border-left: 8px solid transparent;
    }
    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-right {
        margin-left: 10px;
    }
    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-right::before {
        border-right: 8px solid transparent;
    }
    .tba23d2e-67a5-49b7-90d8-4e766b3c125c.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;

exports[`ladder shows schedule line in the other direction 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -20 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line "
      x1={-63}
      x2={40}
      y1={15}
      y2={-15}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,15)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            2
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    >
      <line
        className="m-ladder__line
                  m-ladder__headway-line
                  m-ladder__headway-line--ok"
        id="downward"
        x1={-40}
        x2={-40}
        y1={-40}
        y2={15}
      />
    </g>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t2 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t2
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-20}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-20}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t1 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-20}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t0 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t0
    </text>
  </svg>
  <div
    className="__react_component_tooltip t0d47182-fe4c-48aa-94f6-a617b44295f3 place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.t0d47182-fe4c-48aa-94f6-a617b44295f3 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t0d47182-fe4c-48aa-94f6-a617b44295f3.place-top {
        margin-top: -10px;
    }
    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-top::before {
        border-top: 8px solid transparent;
    }
    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-bottom {
        margin-top: 10px;
    }
    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-left {
        margin-left: -10px;
    }
    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-left::before {
        border-left: 8px solid transparent;
    }
    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-right {
        margin-left: 10px;
    }
    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-right::before {
        border-right: 8px solid transparent;
    }
    .t0d47182-fe4c-48aa-94f6-a617b44295f3.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;

exports[`ladder shows vehicles with block waivers 1`] = `
<div
  className="m-ladder"
  style={
    Object {
      "width": 184,
    }
  }
>
  <svg
    className="m-ladder__svg"
    height={0}
    viewBox="-92 -20 184 0"
    width={184}
  >
    <line
      className="m-ladder__scheduled-line on-time"
      x1={-63}
      x2={40}
      y1={-25}
      y2={-55}
    />
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(63,0)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium ghost"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={11.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={17}
          >
            0123
          </text>
          <g
            transform="scale(0.4375) translate(-24,-23)"
          >
            <path
              className="m-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
            <path
              className="m-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
          </g>
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={4.5}
          >
            X
          </text>
          <g
            transform="translate(9.375, -6.25) scale(0.2) translate(-24, -24)"
          >
            <g
              className="c-icon-alert-circle--black"
            >
              <circle
                className="c-icon-alert-circle__outline"
                cx="24"
                cy="24"
                r="27"
              />
              <circle
                className="c-icon-alert-circle__fill"
                cx="24"
                cy="24"
                r="22.59"
              />
              <g
                className="c-icon-alert-circle__exclamation-point"
              >
                <path
                  d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                />
                <path
                  d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
    <g>
      <g
        className="m-ladder__vehicle  "
        onClick={[Function]}
        transform="translate(-63,-25)"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--medium on-time"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={11}
            rx={5.5}
            ry={5.5}
            width={26}
            x={-13}
            y={-22.5}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={-17}
          >
            run
          </text>
          <path
            className="m-vehicle-icon__triangle"
            d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
            transform="scale(0.625) rotate(180) translate(-24,-22)"
          />
          <g
            transform="translate(-8.75, -1.875) scale(0.2) translate(-24, -24)"
          >
            <g
              className="c-icon-alert-circle--grey"
            >
              <circle
                className="c-icon-alert-circle__outline"
                cx="24"
                cy="24"
                r="27"
              />
              <circle
                className="c-icon-alert-circle__fill"
                cx="24"
                cy="24"
                r="22.59"
              />
              <g
                className="c-icon-alert-circle__exclamation-point"
              >
                <path
                  d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                />
                <path
                  d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={-40}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={-40}
    />
    <g
      className="m-ladder__headway-lines"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t0 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-0}
    >
      t0
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-20}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-20}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t1 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-20}
    >
      t1
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={-40}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={-40}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      data-event="click"
      data-tip="t2 name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={-40}
    >
      t2
    </text>
  </svg>
  <div
    className="__react_component_tooltip t3bc7c7d-ec4d-4aad-b043-b8143c802711 place-top type-dark"
    data-id="tooltip"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
  	.t3bc7c7d-ec4d-4aad-b043-b8143c802711 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-top {
        margin-top: -10px;
    }
    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-top::before {
        border-top: 8px solid transparent;
    }
    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-bottom {
        margin-top: 10px;
    }
    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-left {
        margin-left: -10px;
    }
    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-left::before {
        border-left: 8px solid transparent;
    }
    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-right {
        margin-left: 10px;
    }
    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-right::before {
        border-right: 8px solid transparent;
    }
    .t3bc7c7d-ec4d-4aad-b043-b8143c802711.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
        }
      }
    />
  </div>
</div>
`;
